# ML

Lab 1 Python Statistic/: 1.ipynb  2.ipynb  pyproject.toml
