[tool.poetry]
name = "lab 1 python statistic"
version = "0.1.0"
description = ""
authors = ["Mikita Koukel <nikkovkel258@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.3"
pandas = "^2.2.0"
matplotlib = "^3.8.2"
seaborn = "^0.13.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
